--- a/core/build.gradle
+++ b/core/build.gradle
@@ -21,4 +21,5 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(':annotation')
 }
