--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'java-library'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    compileOnly project(':annotation')
+    compileOnly project(':messagebox-annotation')
     implementation 'com.squareup:javapoet:1.10.0'
 }
 
