--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     compileOnly 'com.github.allenxuan:messagebox-annotation:0.3.0'
-    implementation 'com.github.allenxuan:messagebox-core:0.3.0'
+//    implementation 'com.github.allenxuan:messagebox-core:0.3.0'
+    implementation project(':messagebox-core')
     kapt 'com.github.allenxuan:messagebox-compiler:0.3.0'
-//    kapt project(':messagebox-compiler')
 }
