--- a/messagebox-annotation/build.gradle
+++ b/messagebox-annotation/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'java-library'
+apply plugin: 'maven'
+
+group = 'com.github.allenxuan'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
