--- a/messagebox-core/build.gradle
+++ b/messagebox-core/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 android {
     compileSdkVersion 28
@@ -25,6 +26,20 @@ group = 'com.github.allenxuan'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.github.allenxuan:messagebox-annotation:1.1.0'
+}
+
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = 'com.github.allenxuan.MessageBox'
+            artifactId = 'messagebox-core'
+            version = 'v2.0.0'
+
+            afterEvaluate {
+                from components.release
+            }
+        }
+    }
 }
 
 //ext {
