--- a/messagebox-compiler/build.gradle
+++ b/messagebox-compiler/build.gradle
@@ -6,7 +6,7 @@ group = 'com.github.allenxuan'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    compileOnly 'com.github.allenxuan:messagebox-annotation:1.1.0'
+    compileOnly 'com.github.allenxuan.MessageBox:messagebox-annotation:v3.0.0'
     implementation 'com.squareup:javapoet:1.10.0'
 }
 
