--- a/messagebox-core/build.gradle
+++ b/messagebox-core/build.gradle
@@ -25,15 +25,15 @@ group = 'com.github.allenxuan'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.github.allenxuan:messagebox-annotation:1.1.0'
+    implementation 'com.github.allenxuan.MessageBox:messagebox-annotation:v3.0.0'
 }
 
 publishing {
     publications {
         release(MavenPublication) {
-            groupId = 'com.github.allenxuan.MessageBox'
-            artifactId = 'messagebox-core'
-            version = 'v3.0.0'
+//            groupId = 'com.github.allenxuan.MessageBox'
+//            artifactId = 'messagebox-core'
+//            version = 'v4.0.0'
 
             afterEvaluate {
                 from components.release
