--- a/build.gradle
+++ b/build.gradle
@@ -4,15 +4,16 @@ buildscript {
     ext.kotlin_version = '1.3.20'
     repositories {
         google()
-        jcenter()
-        
+//        jcenter()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+//        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
     }
 }
@@ -20,8 +21,9 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
-        
+//        jcenter()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
