--- a/messagebox-core/build.gradle
+++ b/messagebox-core/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
-apply plugin: 'maven-publish'
+//apply plugin: 'maven-publish'
+apply plugin: 'com.github.dcendents.android-maven'
 
 android {
     compileSdkVersion 28
@@ -22,18 +23,18 @@ android {
 
 group = 'com.github.allenxuan'
 
-publishing {
-    publications {
-        release(MavenPublication) {
-            groupId = 'com.github.allenxuan.MessageBox'
-            artifactId = 'messagebox-core'
-            version = 'v4.0.3'
-            afterEvaluate {
-                from components.release
-            }
-        }
-    }
-}
+//publishing {
+//    publications {
+//        release(MavenPublication) {
+//            groupId = 'com.github.allenxuan.MessageBox'
+//            artifactId = 'messagebox-core'
+//            version = 'v4.0.6'
+//            afterEvaluate {
+//                from components.release
+//            }
+//        }
+//    }
+//}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
