--- a/messagebox-core/build.gradle
+++ b/messagebox-core/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
 //apply plugin: 'maven-publish'
-apply plugin: 'com.github.dcendents.android-maven'
+//apply plugin: 'com.github.dcendents.android-maven'
 
 android {
     compileSdkVersion 28
@@ -21,7 +21,7 @@ android {
 
 }
 
-group = 'com.github.allenxuan'
+//group = 'com.github.allenxuan'
 
 //publishing {
 //    publications {
