--- a/messagebox-core/build.gradle
+++ b/messagebox-core/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
-//apply plugin: 'maven-publish'
-apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'maven-publish'
+//apply plugin: 'com.github.dcendents.android-maven'
 
 android {
     compileSdkVersion 28
@@ -21,20 +21,21 @@ android {
 
 }
 
-group = 'com.github.allenxuan'
+//group = 'com.github.allenxuan'
 
-//publishing {
-//    publications {
-//        release(MavenPublication) {
-//            groupId = 'com.github.allenxuan.MessageBox'
-//            artifactId = 'messagebox-core'
-//            version = 'v4.0.6'
-//            afterEvaluate {
-//                from components.release
-//            }
-//        }
-//    }
-//}
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = 'com.github.allenxuan'
+            artifactId = 'MessageBox'
+            version = 'core-1.3.0'
+
+            afterEvaluate {
+                from components.release
+            }
+        }
+    }
+}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
