--- a/messagebox-compiler/build.gradle
+++ b/messagebox-compiler/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'java-library'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    compileOnly 'com.github.allenxuan:MessageBox:annotation-1.2.0'
+//    compileOnly 'com.github.allenxuan:MessageBox:annotation-1.2.0'
     implementation 'com.squareup:javapoet:1.10.0'
 }
 
