--- a/messagebox-core/build.gradle
+++ b/messagebox-core/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-apply plugin: 'maven-publish'
+//apply plugin: 'maven-publish'
 //apply plugin: 'com.github.dcendents.android-maven'
 
 android {
@@ -23,19 +23,67 @@ android {
 
 //group = 'com.github.allenxuan'
 
-publishing {
-    publications {
-        release(MavenPublication) {
-            groupId = 'com.github.allenxuan'
-            artifactId = 'MessageBox'
-            version = 'core-1.3.1'
-
-            afterEvaluate {
-                from components.release
-            }
-        }
-    }
-}
+//publishing {
+//    publications {
+//        release(MavenPublication) {
+//            groupId = 'com.github.allenxuan'
+//            artifactId = 'MessageBox'
+//            version = 'core-1.4.0'
+//
+//            afterEvaluate {
+//                from components.release
+//
+//                pom.withXml {
+//                    final dependenciesNode = asNode().appendNode('dependencies')
+//
+//                    ext.addDependency = { Dependency dep, String scope ->
+//                        if (dep.group == null || dep.version == null || dep.name == null || dep.name == "unspecified")
+//                            return // invalid dependencies should be ignored
+//
+//                        final dependencyNode = dependenciesNode.appendNode('dependency')
+//                        dependencyNode.appendNode('artifactId', dep.name)
+//
+//                        if (dep.version == 'unspecified') {
+//                            dependencyNode.appendNode('groupId', project.ext.pomGroupID)
+//                            dependencyNode.appendNode('version', project.ext.pomVersion)
+//                            System.println("${project.ext.pomGroupID} ${dep.name} ${project.ext.pomVersion}")
+//                        } else {
+//                            dependencyNode.appendNode('groupId', dep.group)
+//                            dependencyNode.appendNode('version', dep.version)
+//                            System.println("${dep.group} ${dep.name} ${dep.version}")
+//                        }
+//
+//                        dependencyNode.appendNode('scope', scope)
+//                        // Some dependencies may have types, such as aar, that should be mentioned in the POM file
+//                        def artifactsList = dep.properties['artifacts']
+//                        if (artifactsList != null && artifactsList.size() > 0) {
+//                            final artifact = artifactsList[0]
+//                            dependencyNode.appendNode('type', artifact.getType())
+//                        }
+//
+//                        if (!dep.transitive) {
+//                            // In case of non transitive dependency, all its dependencies should be force excluded from them POM file
+//                            final exclusionNode = dependencyNode.appendNode('exclusions').appendNode('exclusion')
+//                            exclusionNode.appendNode('groupId', '*')
+//                            exclusionNode.appendNode('artifactId', '*')
+//                        } else if (!dep.properties.excludeRules.empty) {
+//                            // For transitive with exclusions, all exclude rules should be added to the POM file
+//                            final exclusions = dependencyNode.appendNode('exclusions')
+//                            dep.properties.excludeRules.each { ExcludeRule rule ->
+//                                final exclusionNode = exclusions.appendNode('exclusion')
+//                                exclusionNode.appendNode('groupId', rule.group ?: '*')
+//                                exclusionNode.appendNode('artifactId', rule.module ?: '*')
+//                            }
+//                        }
+//                    }
+//
+//                    configurations.api.getDependencies().each { dep -> addDependency(dep, "api") }
+//                    configurations.implementation.getDependencies().each { dep -> addDependency(dep, "implementation") }
+//                }
+//            }
+//        }
+//    }
+//}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
