--- a/messagebox-annotation/build.gradle
+++ b/messagebox-annotation/build.gradle
@@ -2,7 +2,8 @@ apply plugin: 'java-library'
 //apply plugin: 'maven'
 apply plugin: 'maven-publish'
 
-//group = 'com.github.allenxuan'
+group = 'com.github.allenxuan'
+version = "1.6.0"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -20,69 +21,65 @@ java {
 publishing {
     publications {
         release(MavenPublication) {
-            groupId = 'com.github.allenxuan'
-            artifactId = 'messagebox-annotation'
-            version = '1.5.0'
+            groupId = project.group
+            artifactId = project.name
+            version = project.version
+            from components.java
+            pom.withXml {
+                final dependenciesNode = asNode().appendNode('dependencies')
 
-//            afterEvaluate {
-                from components.java
+                ext.addDependency = { Dependency dep, String scope ->
+                    if (dep.group == null || dep.version == null || dep.name == null || dep.name == "unspecified")
+                        return // invalid dependencies should be ignored
 
-                pom.withXml {
-                    final dependenciesNode = asNode().appendNode('dependencies')
+                    final dependencyNode = dependenciesNode.appendNode('dependency')
+                    dependencyNode.appendNode('artifactId', dep.name)
 
-                    ext.addDependency = { Dependency dep, String scope ->
-                        if (dep.group == null || dep.version == null || dep.name == null || dep.name == "unspecified")
-                            return // invalid dependencies should be ignored
-
-                        final dependencyNode = dependenciesNode.appendNode('dependency')
-                        dependencyNode.appendNode('artifactId', dep.name)
-
-                        if (dep.version == 'unspecified') {
-                            dependencyNode.appendNode('groupId', project.ext.pomGroupID)
-                            dependencyNode.appendNode('version', project.ext.pomVersion)
-                            System.println("${project.ext.pomGroupID} ${dep.name} ${project.ext.pomVersion}")
-                        } else {
-                            dependencyNode.appendNode('groupId', dep.group)
-                            dependencyNode.appendNode('version', dep.version)
-                            System.println("${dep.group} ${dep.name} ${dep.version}")
-                        }
-
-                        dependencyNode.appendNode('scope', scope)
-                        // Some dependencies may have types, such as aar, that should be mentioned in the POM file
-                        def artifactsList = dep.properties['artifacts']
-                        if (artifactsList != null && artifactsList.size() > 0) {
-                            final artifact = artifactsList[0]
-                            dependencyNode.appendNode('type', artifact.getType())
-                        }
-
-                        if (!dep.transitive) {
-                            // In case of non transitive dependency, all its dependencies should be force excluded from them POM file
-                            final exclusionNode = dependencyNode.appendNode('exclusions').appendNode('exclusion')
-                            exclusionNode.appendNode('groupId', '*')
-                            exclusionNode.appendNode('artifactId', '*')
-                        } else if (!dep.properties.excludeRules.empty) {
-                            // For transitive with exclusions, all exclude rules should be added to the POM file
-                            final exclusions = dependencyNode.appendNode('exclusions')
-                            dep.properties.excludeRules.each { ExcludeRule rule ->
-                                final exclusionNode = exclusions.appendNode('exclusion')
-                                exclusionNode.appendNode('groupId', rule.group ?: '*')
-                                exclusionNode.appendNode('artifactId', rule.module ?: '*')
-                            }
-                        }
+                    if (dep.version == 'unspecified') {
+                        dependencyNode.appendNode('groupId', project.ext.pomGroupID)
+                        dependencyNode.appendNode('version', project.ext.pomVersion)
+                        System.println("${project.ext.pomGroupID} ${dep.name} ${project.ext.pomVersion}")
+                    } else {
+                        dependencyNode.appendNode('groupId', dep.group)
+                        dependencyNode.appendNode('version', dep.version)
+                        System.println("${dep.group} ${dep.name} ${dep.version}")
                     }
 
-                    configurations.api.getDependencies().each { dep -> addDependency(dep, "api") }
-                    configurations.implementation.getDependencies().each { dep -> addDependency(dep, "implementation") }
+                    dependencyNode.appendNode('scope', scope)
+                    // Some dependencies may have types, such as aar, that should be mentioned in the POM file
+                    def artifactsList = dep.properties['artifacts']
+                    if (artifactsList != null && artifactsList.size() > 0) {
+                        final artifact = artifactsList[0]
+                        dependencyNode.appendNode('type', artifact.getType())
+                    }
+
+                    if (!dep.transitive) {
+                        // In case of non transitive dependency, all its dependencies should be force excluded from them POM file
+                        final exclusionNode = dependencyNode.appendNode('exclusions').appendNode('exclusion')
+                        exclusionNode.appendNode('groupId', '*')
+                        exclusionNode.appendNode('artifactId', '*')
+                    } else if (!dep.properties.excludeRules.empty) {
+                        // For transitive with exclusions, all exclude rules should be added to the POM file
+                        final exclusions = dependencyNode.appendNode('exclusions')
+                        dep.properties.excludeRules.each { ExcludeRule rule ->
+                            final exclusionNode = exclusions.appendNode('exclusion')
+                            exclusionNode.appendNode('groupId', rule.group ?: '*')
+                            exclusionNode.appendNode('artifactId', rule.module ?: '*')
+                        }
+                    }
+                }
+
+                configurations.api.getDependencies().each { dep -> addDependency(dep, "api") }
+                configurations.implementation.getDependencies().each { dep -> addDependency(dep, "implementation") }
 //                    configurations.provided.getDependencies().each { dep -> addDependency(dep, "provided") }
-                    configurations.compileOnly.getDependencies().each { dep -> addDependency(dep, "compileOnly") }
-                    configurations.runtimeOnly.getDependencies().each { dep -> addDependency(dep, "runtimeOnly") }
+                configurations.compileOnly.getDependencies().each { dep -> addDependency(dep, "compileOnly") }
+                configurations.runtimeOnly.getDependencies().each { dep -> addDependency(dep, "runtimeOnly") }
 //                    println configurations.api.getDependencies()
 //                    println configurations.implementation.getDependencies()
 //                    println configurations.provided.getDependencies()
 //                    println configurations.runtimeOnly.getDependencies()
 //                    println configurations.compileOnly.getDependencies()
-                }
-//            }
+            }
         }
     }
 }
