--- a/messagebox-compiler/build.gradle
+++ b/messagebox-compiler/build.gradle
@@ -1,17 +1,35 @@
 apply plugin: 'java-library'
 //apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
-//group = 'com.github.allenxuan'
+group = 'com.github.allenxuan'
+version = "compiler-1.8.0"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    compileOnly 'com.github.allenxuan:MessageBox:annotation-1.4.0'
+    compileOnly 'com.github.allenxuan:MessageBox:annotation-1.8.0'
     implementation 'com.squareup:javapoet:1.10.0'
 }
 
 sourceCompatibility = "8"
 targetCompatibility = "8"
+
+java {
+    withJavadocJar()
+    withSourcesJar()
+}
+
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = project.group
+            artifactId = "Messagebox"
+            version = project.version
+            from components.java
+        }
+    }
+}
 
 //ext {
 //    bintrayRepo = 'maven'
