--- a/messagebox-annotation/build.gradle
+++ b/messagebox-annotation/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'java-library'
 apply plugin: 'maven-publish'
 
 group = 'com.github.allenxuan'
-version = "annotation-1.8.0"
+version = "1.9.0"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -21,7 +21,7 @@ publishing {
     publications {
         release(MavenPublication) {
             groupId = project.group
-            artifactId = "Messagebox"
+            artifactId = project.name
             version = project.version
             from components.java
         }
