--- a/messagebox-annotation/build.gradle
+++ b/messagebox-annotation/build.gradle
@@ -1,9 +1,9 @@
 apply plugin: 'java-library'
 //apply plugin: 'maven'
-apply plugin: 'maven-publish'
-
-group = 'com.github.allenxuan'
-version = "1.9.0"
+//apply plugin: 'maven-publish'
+//
+//group = 'com.github.allenxuan'
+//version = "1.9.0"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -17,16 +17,16 @@ java {
     withSourcesJar()
 }
 
-publishing {
-    publications {
-        release(MavenPublication) {
-            groupId = project.group
-            artifactId = project.name
-            version = project.version
-            from components.java
-        }
-    }
-}
+//publishing {
+//    publications {
+//        release(MavenPublication) {
+//            groupId = project.group
+//            artifactId = project.name
+//            version = project.version
+//            from components.java
+//        }
+//    }
+//}
 
 //ext {
 //    bintrayRepo = 'maven'
