--- a/messagebox-annotation/build.gradle
+++ b/messagebox-annotation/build.gradle
@@ -12,10 +12,10 @@ dependencies {
 sourceCompatibility = "8"
 targetCompatibility = "8"
 
-java {
-    withJavadocJar()
-    withSourcesJar()
-}
+//java {
+//    withJavadocJar()
+//    withSourcesJar()
+//}
 
 //publishing {
 //    publications {
