--- a/messagebox-annotation/build.gradle
+++ b/messagebox-annotation/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'java-library'
 //apply plugin: 'maven'
 //apply plugin: 'maven-publish'
 //
-//group = 'com.github.allenxuan'
-//version = "1.9.0"
+group = 'com.github.allenxuan'
+version = "1.9.1"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -12,21 +12,21 @@ dependencies {
 sourceCompatibility = "8"
 targetCompatibility = "8"
 
-//java {
-//    withJavadocJar()
-//    withSourcesJar()
-//}
+java {
+    withJavadocJar()
+    withSourcesJar()
+}
 
-//publishing {
-//    publications {
-//        release(MavenPublication) {
-//            groupId = project.group
-//            artifactId = project.name
-//            version = project.version
-//            from components.java
-//        }
-//    }
-//}
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = project.group
+            artifactId = project.name
+            version = project.version
+            from components.java
+        }
+    }
+}
 
 //ext {
 //    bintrayRepo = 'maven'
