--- a/messagebox-compiler/build.gradle
+++ b/messagebox-compiler/build.gradle
@@ -1,9 +1,9 @@
 apply plugin: 'java-library'
 //apply plugin: 'maven'
 //apply plugin: 'maven-publish'
-//
+
 //group = 'com.github.allenxuan'
-//version = "1.9.0"
+//version = "1.9.1"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -19,7 +19,7 @@ targetCompatibility = "8"
 //    withJavadocJar()
 //    withSourcesJar()
 //}
-
+//
 //publishing {
 //    publications {
 //        release(MavenPublication) {
@@ -27,6 +27,18 @@ targetCompatibility = "8"
 //            artifactId = project.name
 //            version = project.version
 //            from components.java
+//
+//            pom.withXml {
+//                project.configurations.compileOnly.allDependencies.each { dep ->
+//                    asNode().dependencies[0].appendNode('dependency').with {
+//                        it.appendNode('groupId', dep.group)
+//                        it.appendNode('artifactId', dep.name)
+//                        it.appendNode('version', dep.version)
+//                        it.appendNode('scope', 'provided')
+//                    }
+//                }
+//
+//            }
 //        }
 //    }
 //}
