--- a/messagebox-annotation/build.gradle
+++ b/messagebox-annotation/build.gradle
@@ -1,9 +1,9 @@
 apply plugin: 'java-library'
 //apply plugin: 'maven'
-//apply plugin: 'maven-publish'
+apply plugin: 'maven-publish'
 //
 group = 'com.github.allenxuan'
-version = "1.9.1"
+version = "1.9.2"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
