--- a/messagebox-annotation/build.gradle
+++ b/messagebox-annotation/build.gradle
@@ -1,9 +1,6 @@
 apply plugin: 'java-library'
 //apply plugin: 'maven'
-//apply plugin: 'maven-publish'
-//
-//group = 'com.github.allenxuan'
-//version = "1.9.3"
+apply plugin: 'maven-publish'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -12,21 +9,21 @@ dependencies {
 sourceCompatibility = "8"
 targetCompatibility = "8"
 
-//java {
-//    withJavadocJar()
-//    withSourcesJar()
-//}
-//
-//publishing {
-//    publications {
-//        release(MavenPublication) {
-//            groupId = project.group
-//            artifactId = project.name
-//            version = project.version
-//            from components.java
-//        }
-//    }
-//}
+java {
+    withJavadocJar()
+    withSourcesJar()
+}
+
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = project.group
+            artifactId = project.name
+            version = project.version
+            from components.java
+        }
+    }
+}
 
 //ext {
 //    bintrayRepo = 'maven'
